# ai

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.txt  docker-compose.yml
src/: main.rs
src/delegates/: error.rs
src/docs/: handlers.rs
src/metrics/: database.rs  index.rs  mod.rs
src/routes/: completions.rs  legacy.rs  mod.rs
static/: index.html
templates/: index.jinja
tests/node/: bun.lockb  index.ts  package.json
