[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
async-stream = "0.3.6"
deadpool-postgres = "0.14.1"
env_logger = "0.11.6"
futures = "0.3.31"
minijinja = { version = "2.6.0", features = ["loader"] }
once_cell = "1.20.2"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-streams = { version = "0.9.0", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = "1.43.0"
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1"] }

