[package]
name = "hackclub-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tracing = { version = "0.1.41" }
serde_json = { version = "1.0.142" }
dotenvy_macro = { version = "0.15.7" }
deadpool-postgres = { version = "0.14.1" }
tracing-subscriber = { version = "0.3.19" }
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
axum = { version = "0.8.4", default-features = false, features = ["json", "tokio", "macros", "http2"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.47.1", default-features = false, features = ["net", "rt-multi-thread", "macros"] }

[profile.release]
lto = "fat"
rpath = false
opt-level = 3
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3
